[package]
name = "launchpad"
version = "0.1.0"
description = "One-click PC setup tool"
authors = ["Marineo"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-execute", "window-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
